# live-bootcamp-project

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yml  docker.sh  fix_migration.sql
.github/workflows/: prod.yml
app-service/: .gitignore
auth-service/: Cargo.toml  Dockerfile
auth-service-macros/: Cargo.toml
auth-service/.sqlx/: query-3c7eba807d46a8c036301ff61095428af1146797a6b8d050f1d3eb16d6ee28b0.json  query-4abdb706f3cae69754e17e256c1ab68c257c4949411d38b6472527c7d41855c4.json  query-91dbe40f47d44495ad8d5bb17cfecd2a27659f2c0e018da76bd70e656386b4a1.json  query-92af21726d369ee62a01f029407e578f6567d527faab8f130991cc13d4e90e22.json  query-eb346a80c37367161b0a92a77bbb677451c33adf7f4f2e2c94dbaa3916d420cf.json  query-ee3058f8914a6114b670d99f9b1abfb35adb028297c3687bb408457ec32e1d1c.json
auth-service/assets/: index.html
auth-service/migrations/: 20251102070417_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/api/: helpers.rs  logout.rs  main.rs  mod.rs
auth-service/src/app_state/: app_state.rs
auth-service/src/domain/: data_store.rs  data_stores.rs  email.rs  email_client.rs  error.rs  helpers.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  mysql_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/tests/: mod.rs
auth-service/src/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
