[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive"] }
jsonwebtoken = "9.3"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "cookies",
] }
