[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-service-macros = { path = "../auth-service-macros" }

axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
async-trait = "0.1.89"

jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
redis = { version = "0.25.2", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "migrate",
] }

uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"
validator = { version = "0.20.0", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive"] }
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
argon2 = { version = "0.5.3", features = ["std"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "cookies",
] }
