[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
auth-service-macros = { path = "../auth-service-macros" }

# Web framework and async runtime
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }

# Authentication and security
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3"
secrecy = { version = "0.8.0", features = ["serde"] }

# Data storage
redis = { version = "0.25.2", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "migrate",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
chrono = "0.4.35"
dotenvy = "0.15.7"
fake = "=2.3.0"
lazy_static = "1.4.0"
rand = "0.9.2"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

# Error handling and tracing
color-eyre = "0.6.5"
thiserror = "2.0.17"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }

[dev-dependencies]
wiremock = "0.6.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
